@@ -1,3 +1,8 @@
+2005-04-11 19:22 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormObjectEditor.m: Correction for problem which
+	was causing issues with dragging.
+
 2005-04-11 16:38 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormDocument.m: Improved documentation.
